2005-04-24  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/fileops.pdb
	* app/pdb/fileops_cmds.c: spelling.

2005-04-24  Hans Breuer  <hans@breuer.org>

	* menus/makefile.msc : build menus with nmake, too
	  menus/Makefile.am : added to EXTRA_DIST

	* **/makefile.msc app/gimpcore.def : updated

	* app/base/tmp-buf.c : there is no pid_t with msvc so typedef one

2005-04-23  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw_thumb):
	respect the selection (fixes bug #301523).

2005-04-23  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/metadata/xmp-schemas.[ch]: Added definition of
	properties from IPTC Core XMP schema (Iptc4xmpCore).

	* plug-ins/metadata/base64.[ch]: Added option to ignore invalid
	characters in base64 encoded text.

	* plug-ins/metadata/xmp-encode.c
	* plug-ins/metadata/xmp-parse.c
	* plug-ins/metadata/testbase64.c: Updated accordingly.

2005-04-22  Sven Neumann  <sven@gimp.org>

	* configure.in
	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/winclipboard.c: removed winclipboard plug-in
	from CVS. It is not any longer needed as long as GTK+ >= 2.6.5
	is being used. Fixes bug #165219.

2005-04-22  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/metadata/xmp-model.[ch]: Fixed crash occuring after a
	double free of some structured XMP properties.  Added new type
	XMP_TYPE_GENERIC_STRUCTURE for unknown structured properties.  Be
	more tolerant in parsing incorrectly written schema URIs and try
	to extract a valid URI from them.  Converted to use g_print().
	Moved the definitions of standard XMP schemas from here...

	* plug-ins/metadata/xmp-schemas.[ch]: ...to these new files.

	* plug-ins/metadata/xmp-encode.[ch]: Rewritten using GString
	instead of fixed buffers.

	* plug-ins/metadata/metadata.c
	* plug-ins/metadata/interface.c: Adapted to the new function
	xmp_generate_block() using GString.

	* plug-ins/metadata/base64.c (base64_encode): Fixed incorrect